--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "vite": "^5.2.13"
   },
   "dependencies": {
-    "javascript-obfuscator": "^4.1.1",
-    "rollup-obfuscator": "^4.1.1"
+    "javascript-obfuscator": "^4.1.1"
   }
 }
