--- a/package.json
+++ b/package.json
@@ -11,7 +11,5 @@
   "devDependencies": {
     "vite": "^5.2.13"
   },
-  "dependencies": {
-    "javascript-obfuscator": "^4.1.1"
-  }
+  "dependencies": {}
 }
